# rocketride-workshops

./: .gitattributes  .gitignore  .npmrc  .prettierignore  README.md  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.tmp/: inspect_runs.py
scripts/: verify-e2e.mjs  verify-runtime-installed.mjs
tools/launchpad/: README.md  package.json
tools/launchpad/src/: install.mjs  preflight.mjs  start.mjs  version.mjs
workshops/coding-agent/assets/: INSTRUCTOR_SCRIPT.md  LESSON_PLAN.md
workshops/coding-agent/assets/inputs/: README.md
workshops/coding-agent/exercise/: EXERCISE.md  README.md  package.json
workshops/coding-agent/exercise/api/: package.json  pyproject.toml
workshops/coding-agent/exercise/api/app/: main.py
workshops/coding-agent/exercise/api/app/libs/rocketride/: chat.py  client.py
workshops/coding-agent/exercise/api/app/pipelines/: PIPELINE_WALKTHROUGH.md  coding-agent-single.pipe  coding-agent.pipe
workshops/coding-agent/exercise/api/app/pipelines/definitions/: README.md
workshops/coding-agent/exercise/api/app/pipelines/sdk/: hello_client.py
workshops/coding-agent/exercise/api/tests/: conftest.py  test_chat_pure.py  test_client.py  test_main_lifecycle.py  test_secret_scrub.py  test_websocket_recovery.py
workshops/coding-agent/exercise/runtime/: package.json
workshops/coding-agent/exercise/ui/: index.html  package.json
workshops/coding-agent/solution/: README.md  package.json
workshops/coding-agent/solution/.output/: README.md  package.json
workshops/coding-agent/solution/api/: .env.example  package.json  pyproject.toml
workshops/coding-agent/solution/api/app/: main.py
workshops/coding-agent/solution/api/app/libs/rocketride/: __init__.py  chat.py  client.py
workshops/coding-agent/solution/api/app/pipelines/: PIPELINE_WALKTHROUGH.md  chat-only.pipe  coding-agent-new.pipe  coding-agent-single.pipe  coding-agent.pipe
workshops/coding-agent/solution/api/app/pipelines/definitions/: hello.py
workshops/coding-agent/solution/api/app/pipelines/sdk/: hello_client.py
workshops/coding-agent/solution/api/tests/: conftest.py  test_chat_pure.py  test_client.py  test_dump_tracer.py  test_main_lifecycle.py  test_pure_main.py  test_send_helpers.py  test_start_coding_agent.py  test_websocket_blob.py  test_websocket_recovery.py  test_websocket_text.py
workshops/coding-agent/solution/ui/: index.html  package.json  vite.config.ts
(+57 files in other folders)
