[project]
name = "coding-agent-solution-api"
version = "0.0.0"
description = "FastAPI back-end for the coding-agent workshop solution."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
