[project]
name = "coding-agent-solution-api"
version = "0.0.0"
description = "FastAPI back-end for the coding-agent workshop solution."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "rocketride>=1.0.5",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["app"]
